Mon Feb  3 17:09:07 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* DFloNum.java (makeMethod):  Make public.
	* IntNum.java (makeIntMethod, makeLongMethod):  Make public.
	* {DFloNum,IntNum}.java (initMakeMethods):  New methods,
	* Makefile.{am,in} (CLEANFILES):  Delete *.class, not just $(OBJ).

Tue Jan 21 18:25:50 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* Complex.java (doubleRealValue):  Synonym for doubleValue();
	(polar, power, abs, angle, div, div_reversed, exp, log, sqrt):  New.
	* DComplex.java (div, power, log, sqrt, hypot):  New methods.
	* RealNum.java (dov, angle, exp, log, sin, sqrt):  New methods.
	* Unit.java (sqrt): New (placeholder) method.
	(mul):  Add extra simplifications.
	* MulUnit.java (sqrt):  New method.

Mon Jan 20 15:58:50 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* Numeric.java:  Inherit from java.lang.Number.
	(intValue, longValue): New methods.
	* Complex.java, DFloNum.java, IntFraction.java:  New longValue method.

	* DQuantity.java (add):  Adjust for different units.
	* IntNum.java (longValue):  Support non-normalized value.
	(appendWord, increment_unsigned, increment): Remove useless code.
	* Unit.java:  Added minute and hour.

Fri Jan  3 14:44:53 1997  Per Bothner  <bothner@deneb.cygnus.com>

	Implemented units, quantities, and dimensions for measurements.
	Implemented complex numbers.
	* BaseUnit.java, CComplex.java, CQuantity.java, Complex.java,
	DComplex.java, DFloNum.java, DQuantity.java, MulUnit.java,
	Quantity.java, Unit.java:  New files.
	* Makefile.am, Makefile.in:  Update accordingly.

	* Numeric.java, RatNum.java, RatNum.java, IntFraction.java (add,
	add_reversed):  Virtual and static methods changed to take extra
	int parameter that second argument is multiplied by.
	Likewise for static add/plus methods.
	Rename generalized static plus functions to add.
	(sub, sub_reversed):  Virtual methods removed.

	* Numeric (div_inv, mul_ident, power):  New methods.